# graphmem

./: .gitignore  CHANGELOG.md  DEVPLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  graphmem.yml
examples/: quickstart.py
src/graphmem/: __init__.py  cli.py  engine.py  hooks.py  interfaces.py  models.py  schema.py  store.py
src/graphmem/detectors/: __init__.py  file_change.py
src/graphmem/sources/: __init__.py  memory_md.py
tests/: __init__.py  conftest.py  test_engine.py  test_integration.py
tests/fixtures/: sample_memory.md
