[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphmem"
version = "0.1.0"
description = "Core graph-backed memory store for graphmem."
requires-python = ">=3.10"
dependencies = [
  "kuzu>=0.3.0",
  "pydantic>=2.0.0",
  "gitpython>=3.1.0",
  "typer>=0.9.0",
]

[project.optional-dependencies]
llm = [
  "openai>=1.0",
]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "ruff",
]

[project.scripts]
graphmem = "graphmem.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/graphmem"]
